--- a/package.json
+++ b/package.json
@@ -7,12 +7,13 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "acquiring": "git+https://github.com/serg-shkatula/acquiring.git",
     "classnames": "^2.2.6",
     "perspective-transform": "^1.1.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
-    "typescript": "~3.7.2"
+    "typescript": "^3.8.3"
   },
   "devDependencies": {
     "@types/classnames": "^2.2.10",
